Fix repo formatting